# payment_portal

./: LICENSE  README.md  app.py  db_connector.py  db_test.py  pyproject.toml  vercel.json
static/css/: styles.css
static/js/: auth.js  dashboard.js  main.js  settings.js  transactions.js  transfers.js  users.js
templates/: 404.html  500.html  dashboard.html  index.html  login.html  settings.html  signup.html  transactions.html  transfers.html  users.html
