[tool.poetry]
name = "payment_portal"
version = "0.1.0"
description = "Add your description here"
authors = ["Suyash Abhishek Kumar <suyash.a.kumar@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
flask = ">=3.1.0"
flask-cors = ">=3.0.10"
flask-login = ">=0.6.3"
email-validator = ">=2.2.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
psycopg2-binary = ">=2.9.10"
pymysql = ">=1.0.3"
bcrypt = ">=4.0.1"